--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <div class="application"></div>
+
+  <button>TEST!</button>
+
   <script src="main.bundle.js"></script>
 </body>
 </html>
